--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
-    "bullmq": "^3.10.0",
+    "bullmq": "^3.16.0",
     "bunyan": "^1.8.15",
     "canvas": "^2.11.2",
     "cloudinary": "^1.35.0",
@@ -41,6 +41,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "generic-pool": "^3.9.0",
     "helmet": "^6.0.1",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
