update link cloudinary for temp link, analysis for htmlPost in BlockNoteView

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,5 +44,9 @@
       "@statistics/*": ["src/features-admin/statistics/*"],
       "@root/*": ["src/*"]
     }
-  }
+  }, 
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts"
+  ]
 }
