--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "bull": "^4.16.3",
     "bullmq": "^3.16.0",
     "bunyan": "^1.8.15",
-    "canvas": "^2.11.2",
+    "canvas": "^3.0.0",
+    "cheerio": "^1.0.0",
     "cloudinary": "^1.35.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
@@ -48,6 +49,7 @@
     "ioredis": "^5.4.1",
     "ip": "^1.1.8",
     "joi": "^17.8.3",
+    "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -73,6 +75,7 @@
     "@types/hpp": "^0.2.2",
     "@types/ip": "^1.1.0",
     "@types/jest": "^29.4.0",
+    "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/nodemailer": "^6.4.7",
