--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,7 @@ ai-server/server-ai.py
 ai-server/app.py
 ai-server/test.jpg
 ai-server/test.py
+ai-server/test_concurrent.py
 
 #other files
 downloaded-base64.txt
